--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Thibault Richard">
     <meta name="description" content="Le site du docteur richard, endocrinologue et diabétologue dans la région du hainaut / Chimay et Charleroi">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Dr. Richard</title>
 </head>
 <body>
