--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="right-column">
-            <img class="round" src="img/min/IMG_8866-Modifier2.jpg" alt="photo dr richard">
+            <img class="round" src="img/min/pp.jpg" alt="photo dr richard">
             <h2>Dr. Thibault Richard</h2>
             <p class="medium">Diabetologie - Endocrinologie</p>
             <a href="https://rosa.be/fr/thibault-richard?motive_id=62f521042de693e1ab0f255b&specialty_id=10583&hp_id=FIRST_AVAILABILITY_SELECT_ID" id="hidden"><button id="rdv">Prendre rendez-vous</button></a>
